# IHAB

./: .gitignore  404.html  README.md  develop.code-workspace  index.html  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: nightly.yml  pull_request.yml  release.yml
backend/: .pylintrc  app.py
backend/app/: global_logger.py
backend/app/models/db/: account.py  database.py
backend/app/models/db/tables/: example.py
backend/helpers/: db_setup.py  init_db.py  test_db_temp.py
changelog/v0.0.0/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/changelog/: v0.0.0.md
docs/docs/documentation/: reasoning.md
documentation/reasoning/: index.html
ihab/core/: config.py
ihab/core/settings/: directories.py
ihab/db/models/: transaction.py
search/: search_index.json
